# AnatomicalModeling

./: .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  FRONTEND_SETUP.md  PHASE_A3_COMPLETE.md  PHASE_A4_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  SEGMENTATION_IMPROVEMENTS_SUCCESS.md  VIEWING_RESULTS.md  cleanup_final.sh  compare_segmentation.py  download_and_view.sh  download_meshes.sh  requirements.txt  view_mesh.html  visualize_labels.py
.claude/: settings.local.json
docs/: SEGMENTATION_EXPLAINED.md  phase-a2-complete.md  testing-phase-a2.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  globals.css  (+2 more)
imaging-worker/: .env.example  INSTALL.md  README.md  conftest.py  pyproject.toml  requirements.txt
imaging-worker/docs/: api.md  getting-started.md  phase-a1-complete.md
imaging-worker/scripts/: validate_mesh.py
imaging-worker/src/: __init__.py  cli.py  pipeline.py
imaging-worker/src/debug/: __init__.py  diagnostics.py
imaging-worker/src/export/: __init__.py  mesh_export.py
imaging-worker/src/io/: dicom_ingest.py
imaging-worker/src/mesh/: __init__.py  postprocess.py  repair.py
imaging-worker/src/prep/: resample.py
imaging-worker/src/seg/: classical 2.py  classical.py  metrics.py
imaging-worker/src/surf/: __init__.py  marching_cubes.py
imaging-worker/tests/: conftest.py  test_coordinates.py  test_dicom_ingest.py  test_resample.py
infra/: README.md  docker-compose.yml
orchestration/: .env.example  README.md  TROUBLESHOOTING.md  package-lock.json  package.json  test-spawn.js
(+29 files in other folders)
