[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imaging-worker"
version = "0.1.0"
description = "DICOM to 3D mesh processing worker"
requires-python = ">=3.10"
dependencies = [
    "pydicom>=2.4.0",
    "SimpleITK>=2.3.0",
    "nibabel>=5.0.0",
    "scikit-image>=0.22.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0",
    "trimesh>=4.0.0",
    "pyvista>=0.43.0",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    # Pin boto3 and botocore to avoid conflicts with aiobotocore
    "boto3>=1.34.41,<1.34.70",
    "botocore>=1.34.41,<1.34.70",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
dl = [
    "onnxruntime>=1.16.0",
    "monai>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
